Fix pace not to fill whole page on firefox

--- a/themes/green/pace-theme-barber-shop.css
+++ b/themes/green/pace-theme-barber-shop.css
@@ -23,7 +23,7 @@
 
 .pace .pace-progress {
   background-color: #22df80;
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   right: 100%;
@@ -32,7 +32,7 @@
 }
 
 .pace .pace-activity {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: -32px;
   bottom: 0;
